tests/paczka2/big_fuzzy/25700211.err
Error in line 7: GaFhBykh S160 55,4
Error in line 20: lSuZbC2rLJc A951 25,3
Error in line 28: lSuZbC2rLJc S160 75,9
Error in line 35: vaBnCaon S160 201,2
Error in line 65: GaFhBykh S160 38,2
Error in line 77: rx4jymcPDX S633 14,5
Error in line 80: vaBnCaon A951 5,9
Error in line 90: S633 S633 58,1
Error in line 76: lSuZbC2rLJc S160 83,8
Error in line 95: kcuN5a1ciDg A325 47,4
Error in line 79: rx4jymcPDX S160 94,7
Error in line 97: kcuN5a1ciDg S633 28,9
Error in line 102: kcuN5a1ciDg A951 37,0
Error in line 100: rx4jymcPDX A951 90,4
Error in line 106: kcuN5a1ciDg S160 93,2
Error in line 124: lSuZbC2rLJc A951 34,4
Error in line 126: kcuN#a1ciDg S160 67,8
Error in line 122: S633 A951 144,6
Error in line 117: kcuN5a1ciDg A951 57,1
Error in line 141: kcuN5a1ciDg S160 175,0
Error in line 145: kcuN5a1ciDg S633 7,6
Error in line 148: kcuN5a1ciDg S160 3,45
Error in line 147: kcuN5a1ciDg A951 9,7
Error in line 149: GaFhBykh S633 10,5
Error in line 144: rx4jymcPDX A325 87,7
Error in line 158: rx4jymcPDX S633 40,4
Error in line 154: kcuN5a1ciDg A325 86,2
Error in line 146: lSuZbC2rLJc S633 0,0
Error in line 184: vaBnCaon S633 14,6
Error in line 191: lSuZbC2rLJc A325 55,2
Error in line 192: lSuZbC2rLJc A951 798,3
Error in line 200: lSuZbC2rLJc S160 0,1
Error in line 185: GaFhBykh S633 144,9
Error in line 211: GaFhBykh A951 57,3
Error in line 214: GaFhBykh S160 125,37
Error in line 213: kcuN5a1ciDg A325 28,8
Error in line 223: S633 S160 90,4
Error in line 212: GaFhBykh S160 39,4
